# lvgl

./: CMakeLists.txt  Kconfig
examples/: LVGL_Arduino.ino
examples/libs/sjpg/: lv_example_sjpg_1.c
src/draw/nxp/pxp/: lv_gpu_nxp_pxp_osa.c
src/draw/stm32_dma2d/: lv_gpu_stm32_dma2d.c
src/extra/: lv_extra.c
src/misc/: lv_txt.c
zephyr/: CMakeLists.txt  Kconfig  Kconfig.input  lvgl.c  lvgl.ld  lvgl_display.c  lvgl_display.h  lvgl_display_16bit.c  lvgl_display_24bit.c  lvgl_display_32bit.c  lvgl_fs.c  lvgl_input_sink.c  lvgl_input_sink.h  module.yml
zephyr/include/: lvgl_input_sink.h
